# aml_challenge

./: .gitignore  README.md  ensemble_combine_CSVs_16seeds.py  ensemble_combine_CSVs_all_23seeds.py  pyproject.toml  run.sh  setup.sh  train.py  train_mrr.py  train_mrr_Ensemble_new_dataset_CLIP.py  train_mrr_Ensemble_new_dataset_CLIP_AdamW_5_batches.py  train_mrr_Ensemble_old_dataset.py  train_mrr_hpp_tunning_RandSearch.py  train_other.py  visualize_split_top_50.ipynb
hpsearch/: train_mrr_hpp_tunning.py
src/: clip_filter_pairs.py  topk_filter_pairs.py
